--- a/dev/pug/config/variables.pug
+++ b/dev/pug/config/variables.pug
@@ -1,6 +1,7 @@
 -let pageTitle = 'Inicio'
 -let siteName = 'Inouti'.toUpperCase()
 -let metaDescription = `Plantilla para Mikrotik | Hotspot by ${siteName} 🧡`
+-let currentPage = 'Inicio'
 -let pageImage = ''
 -let metaColor = '#FF9800'
 
