--- a/dev/scss/config/_variables.scss
+++ b/dev/scss/config/_variables.scss
@@ -15,6 +15,7 @@ $breakPoints: (
   --color-text: #263238;
   --color-text2: #1D272C;
   --color-bg: #FFF3E0;
+  --color-bg2: #ffe0b2;
   --color-white: #FAFAFA;
 }
 $color-primary: #FF9800;
