--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -35,5 +35,6 @@
 @import "components/form";
 @import "components/icons";
 @import "components/card";
+@import "components/table";
 @import "node_modules/@glidejs/glide/src/assets/sass/glide.core";
 @import "components/slide-js";
