Crea el responsive de la page.

--- a/dev/pug/pages/status.pug
+++ b/dev/pug/pages/status.pug
@@ -29,6 +29,7 @@ block main
         tr.table__row
           td.table__column.strong Tiempo restante
           td.table__column.time <span>15 min</span>
-    div.status.center-content.b-shadow
-      h1.status__greet Bienvenid@
-      p.status__status Estado: <span class="" style="color: #00e676;">activo</span>
+    div.container
+      div.status.center-content.b-shadow
+        h1.status__greet Bienvenid@
+        p.status__status Estado: <span class="" style="color: #00e676;">activo</span>
