--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -36,5 +36,6 @@
 @import "components/icons";
 @import "components/card";
 @import "components/table";
+@import "components/error";
 @import "node_modules/@glidejs/glide/src/assets/sass/glide.core";
 @import "components/slide-js";
